# babylist-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
docs/: architecture.md  development.md  index.md  output-schema.md  usage.md
src/babylist_scraper/: __init__.py  cli.py  config.py  exporter.py  models.py  parser.py  scraper.py
tests/: conftest.py  test_exporter.py  test_parser.py
tests/fixtures/: reg_items.json
