[project]
name = "babylist-scraper"
version = "0.1.0"
description = "Scrape a public Babylist baby registry to a flat file (xlsx/csv/parquet)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "playwright>=1.44",
    "httpx>=0.27",
    "polars>=1.0",
    "xlsxwriter>=3.2",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "duckdb>=1.5.4",
]

[project.scripts]
babylist-scraper = "babylist_scraper.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "sqlfluff>=3.0",
    "yamlfix>=1.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/babylist_scraper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # long lines in docstrings; the formatter handles code width

[tool.ty.environment]
python-version = "3.14"

[tool.sqlfluff.core]
dialect = "ansi"
